# rust.fun

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  geo_tests.r  setup.R  tests.R
R/: extendr-wrappers.R  formatd.R
man/: assign_points_to_polygons.Rd  get_property_names.Rd
src/: Makevars  Makevars.win  entrypoint.c  rust.fun-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
